fixed typo in dragon template

--- a/Templates/Dragon Template.html
+++ b/Templates/Dragon Template.html
@@ -21,7 +21,7 @@
 
         <div id="content" class="content">
 
-            <div><h1>Gronckle</h1></div>
+            <div><h1>DRAGON NAME</h1></div>
             <p> <!-- Short Introduction to the dragon (1 paragraph, no more, no less.) -->
                 <i><b>The DRAGON NAME</b></i> is a <b>SIZE-sized 
                 <a class="redirect" onclick="RedirectToBoulderClass()">CLASS Class dragon</a></b> that appears
