--- a/Templates/Dragon Template.html
+++ b/Templates/Dragon Template.html
@@ -9,8 +9,7 @@
     <!-- External CSS file(s) & JS Scripts -->
         <link rel="stylesheet" href="/Wiki/commonwiki.css">
         <script src="/Wiki/toc.js"></script>
-        <script src="/Wiki/history.js">
-        </script>
+        <script src="/Wiki/history.js"></script>
         <script src="/lang-loader.js"></script>
         <script src="/Wiki/wikiredirects.js"></script>
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
