made it clearer you are able to click on the classes

--- a/Wiki/commonwiki.css
+++ b/Wiki/commonwiki.css
@@ -14,9 +14,10 @@ body,head {
     color: whitesmoke;
 }
 a {
-    text-decoration: underline;
     color: whitesmoke;
-
+}
+a:hover {
+    text-decoration: underline;
 }
 /*------------------------------------------------*/
 
