--- a/Wiki/Dragons/dragons.css
+++ b/Wiki/Dragons/dragons.css
@@ -39,3 +39,8 @@
     justify-content: center;
     align-items: center;
 }
+.blocks-item:hover {
+    text-decoration: underline;
+    color:whitesmoke;
+    box-shadow: 0 2px 15px rgba(175,175,175,0.6);
+}
